--- a/EY/Src/Components/manager-1.fx.yaml
+++ b/EY/Src/Components/manager-1.fx.yaml
@@ -1,4 +1,4 @@
-admin As CanvasComponent:
+"'manager-1' As CanvasComponent":
     Fill: =RGBA(237, 237, 237, 1)
     Height: =640
     Width: =640
@@ -6,35 +6,35 @@ admin As CanvasComponent:
     Y: =0
     ZIndex: =1
 
-    "Gallery2 As gallery.'BrowseLayout_Vertical_TwoTextOneImageVariant_ver5.0'":
+    "Gallery2_3 As gallery.'BrowseLayout_Vertical_TwoTextOneImageVariant_ver5.0'":
         DelayItemLoading: =true
-        Fill: =RGBA(0, 94, 146, 1)
-        Height: =622
-        Items: =["Dashboard","Managers","Branches","Employee","Leave Requests","Transfer Employee"]
+        Fill: =RGBA(0, 16, 96, 1)
+        Height: =640
+        Items: =["Dashboard","Branches","Employee","Leave Requests","Transfer Employee"]
         Layout: =Layout.Vertical
         LoadingSpinner: =LoadingSpinner.Data
         OnSelect: |
             =If(ThisItem.IsSelected,RGBA(153,207,236,1),RGBA(102,182,227,1));
         ShowScrollbar: =false
         TemplatePadding: =0
-        TemplateSize: =49
+        TemplateSize: =84
         Transition: =Transition.Push
         ZIndex: =5
 
-        Rectangle5 As rectangle:
-            Height: =Parent.TemplateHeight
+        Rectangle5_3 As rectangle:
+            Height: =Parent.TemplateHeight - Separator2.Height
             OnSelect: =Select(Parent)
             Visible: =If(ThisItem.IsSelected, true, false)
             Width: =4
             ZIndex: =6
 
-        Button2 As button:
+        Button2_4 As button:
             Fill: =RGBA(102, 182, 227, 1)
             Font: =Font.Lato
             OnSelect: =Select(Parent)
             Size: =12
             Text: =ThisItem.Value
             X: =4
-            Y: =4
+            Y: =19
             ZIndex: =7
 
