--- a/EY/CanvasManifest.json
+++ b/EY/CanvasManifest.json
@@ -98,7 +98,7 @@
       "zeroalltabindexes": false
     },
     "Author": "",
-    "BindingErrorCount": 7,
+    "BindingErrorCount": 10,
     "ContainsThirdPartyPcfControls": false,
     "DefaultConnectedDataSourceMaxGetRowsCount": 500,
     "DocumentAppType": "DesktopOrTablet",
@@ -148,6 +148,8 @@
     "Restaurants",
     "Geographies",
     "Settings",
-    "Onboarding Form"
+    "Onboarding Form",
+    "Apply Access Card",
+    "Access Card Manager"
   ]
 }
