--- a/EY/Src/admin Dashboard.fx.yaml
+++ b/EY/Src/admin Dashboard.fx.yaml
@@ -42,47 +42,48 @@
         BorderColor: =RGBA(202, 202, 202, 1)
         BorderThickness: =1
         DelayItemLoading: =true
-        Height: =339
+        Height: =332
         Items: =Branches
         Layout: =Layout.Vertical
         LoadingSpinner: =LoadingSpinner.Data
         OnSelect: =Navigate(adminDashboardList)
         TemplatePadding: =0
-        TemplateSize: =104
-        X: =230
-        Y: =429
+        TemplateSize: =70
+        Width: =948
+        X: =286
+        Y: =422
         ZIndex: =5
 
         Title1 As label:
             FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
-            Height: =41
+            Height: =26
             OnSelect: =Select(Parent)
             PaddingBottom: =0
             PaddingLeft: =0
             PaddingRight: =0
             PaddingTop: =0
-            Size: =20
+            Size: =15
             Text: =ThisItem.Title
             VerticalAlign: =VerticalAlign.Top
             Width: =99
-            X: =476
-            Y: =34
+            X: =552
+            Y: =36
             ZIndex: =2
 
         Subtitle1 As label:
             FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
-            Height: =55
+            Height: =29
             OnSelect: =Select(Parent)
             PaddingBottom: =0
             PaddingLeft: =0
             PaddingRight: =0
             PaddingTop: =0
-            Size: =25
-            Text: =ThisItem.Branchname
+            Size: =15
+            Text: =ThisItem.Location
             VerticalAlign: =VerticalAlign.Top
-            Width: =345
-            X: =35
-            Y: =27
+            Width: =195
+            X: =4
+            Y: =33
             ZIndex: =3
 
         Separator1 As rectangle:
@@ -187,7 +188,7 @@
         Font: =Font.'Lato Black'
         Height: =50
         Size: =30
-        Text: =CountRows('Restaurant Manager')
+        Text: =CountRows('Restaurant Manager_1')
         Width: =101
         X: =883
         Y: =279
@@ -209,15 +210,6 @@
         X: =836
         Y: =177
         ZIndex: =14
-
-    PieChart1 As pieChart:
-        Height: =339
-        ItemBorderColor: =RGBA(219, 219, 219, 1)
-        Items: =lists
-        Width: =496
-        X: =870
-        Y: =415
-        ZIndex: =17
 
     Label10 As label:
         FontWeight: =FontWeight.Semibold
@@ -260,19 +252,19 @@
     Label12 As label:
         BorderColor: =RGBA(202, 202, 202, 1)
         BorderThickness: =1
-        Height: =54
+        Fill: =RGBA(204, 231, 246, 1)
         Size: =20
         Text: ="Branch Name"
-        Width: =640
-        X: =230
-        Y: =375
+        Width: =948
+        X: =286
+        Y: =382
         ZIndex: =22
 
     Label20 As label:
         Size: =20
         Text: |-
             ="Branch ID :"
-        X: =670
+        X: =800
         Y: =382
         ZIndex: =23
 
