--- a/EY/Src/admin Dashboard_1.fx.yaml
+++ b/EY/Src/admin Dashboard_1.fx.yaml
@@ -6,16 +6,6 @@
         Width: =1366
         ZIndex: =1
 
-    Rectangle3_2 As rectangle:
-        BorderColor: =RGBA(255, 255, 255, 1)
-        Fill: =RGBA(255, 255, 255, 1)
-        Height: =152
-        OnSelect: =Set(lists,Branches)
-        Width: =196
-        X: =230
-        Y: =161
-        ZIndex: =2
-
     Label5_4 As label:
         Align: =Align.Center
         Fill: =RGBA(219, 219, 219, 1)
@@ -24,8 +14,8 @@
         Size: =30
         Text: =CountRows(Branches)
         Width: =104
-        X: =276
-        Y: =279
+        X: =345
+        Y: =260
         ZIndex: =3
 
     Label7_4 As label:
@@ -34,54 +24,39 @@
         Height: =76
         Size: =20
         Text: ="Branches"
-        X: =253
-        Y: =182
+        X: =322
+        Y: =176
         ZIndex: =4
 
     "Gallery1_2 As gallery.'BrowseLayout_Vertical_TwoTextOneImageVariant_ver5.0'":
         DelayItemLoading: =true
-        Height: =339
-        Items: =lists
+        Height: =359
+        Items: =Employees
         Layout: =Layout.Vertical
         LoadingSpinner: =LoadingSpinner.Data
         OnSelect: =Navigate(adminDashboardList)
         TemplatePadding: =0
-        TemplateSize: =104
-        X: =230
-        Y: =429
+        TemplateSize: =78
+        Width: =1136
+        X: =212
+        Y: =402
         ZIndex: =5
 
         Title1_2 As label:
             FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
-            Height: =41
+            Height: =24
             OnSelect: =Select(Parent)
             PaddingBottom: =0
             PaddingLeft: =0
             PaddingRight: =0
             PaddingTop: =0
-            Size: =20
+            Size: =15
             Text: =ThisItem.Title
             VerticalAlign: =VerticalAlign.Top
             Width: =99
-            X: =476
-            Y: =34
+            X: =73
+            Y: =22
             ZIndex: =2
-
-        Subtitle1_2 As label:
-            FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
-            Height: =55
-            OnSelect: =Select(Parent)
-            PaddingBottom: =0
-            PaddingLeft: =0
-            PaddingRight: =0
-            PaddingTop: =0
-            Size: =25
-            Text: =ThisItem.Branchname
-            VerticalAlign: =VerticalAlign.Top
-            Width: =345
-            X: =35
-            Y: =27
-            ZIndex: =3
 
         Separator1_2 As rectangle:
             Height: =8
@@ -97,6 +72,54 @@
             Width: =4
             ZIndex: =6
 
+        Label32 As label:
+            OnSelect: =Select(Parent)
+            Text: =ThisItem.PhoneNumber
+            X: =334
+            Y: =13
+            ZIndex: =8
+
+        Label33 As label:
+            OnSelect: =Select(Parent)
+            Text: =ThisItem.Gender.Value
+            X: =216
+            Y: =14
+            ZIndex: =9
+
+        Label34 As label:
+            Height: =37
+            OnSelect: =Select(Parent)
+            Text: =ThisItem.email
+            Width: =258
+            X: =506
+            Y: =9
+            ZIndex: =10
+
+        Label35 As label:
+            Height: =39
+            OnSelect: =Select(Parent)
+            Text: =ThisItem.TypeOfEmployee.Value
+            Width: =92
+            X: =790
+            Y: =7
+            ZIndex: =11
+
+        Label36 As label:
+            Height: =53
+            OnSelect: =Select(Parent)
+            Text: =ThisItem.TypeOfEmployment.Value
+            X: =922
+            ZIndex: =12
+
+        Label38 As label:
+            Align: =Align.Center
+            OnSelect: =Select(Parent)
+            Text: =ThisItem.EmpId
+            Width: =50
+            X: =4
+            Y: =16
+            ZIndex: =13
+
     Label7_7 As label:
         Align: =Align.Center
         Font: =Font.Lato
@@ -104,8 +127,8 @@
         Size: =20
         Text: ="Employees"
         Width: =173
-        X: =544
-        Y: =182
+        X: =622
+        Y: =176
         ZIndex: =6
 
     Label5_7 As label:
@@ -116,8 +139,8 @@
         Size: =30
         Text: =CountRows(Employees)
         Width: =101
-        X: =580
-        Y: =279
+        X: =658
+        Y: =259
         ZIndex: =7
 
     Component1_2 As admin:
@@ -133,15 +156,14 @@
         Fill: =RGBA(0, 0, 0, 0)
         Height: =152
         HoverFill: =RGBA(202, 202, 202, 0.32)
-        OnSelect: =Set(lists,Employees)
         RadiusBottomLeft: =20
         RadiusBottomRight: =20
         RadiusTopLeft: =20
         RadiusTopRight: =20
         Text: =""
         Width: =195
-        X: =534
-        Y: =176
+        X: =611
+        Y: =157
         ZIndex: =9
 
     Button3_6 As button:
@@ -150,15 +172,15 @@
         Fill: =RGBA(0, 0, 0, 0)
         Height: =152
         HoverFill: =RGBA(209, 205, 205, 0.27)
-        OnSelect: =Set(lists,Branches)
+        OnSelect: =Navigate('admin Dashboard')
         RadiusBottomLeft: =20
         RadiusBottomRight: =20
         RadiusTopLeft: =20
         RadiusTopRight: =20
         Text: =
         Width: =195
-        X: =231
-        Y: =176
+        X: =299
+        Y: =157
         ZIndex: =10
 
     Icon2_4 As icon.Hamburger:
@@ -175,8 +197,8 @@
         Size: =20
         Text: ="Managers"
         Width: =173
-        X: =836
-        Y: =182
+        X: =920
+        Y: =176
         ZIndex: =12
 
     Label5_8 As label:
@@ -185,10 +207,10 @@
         Font: =Font.'Lato Black'
         Height: =50
         Size: =30
-        Text: =CountRows('Restaurant Manager')
+        Text: =CountRows('Restaurant Manager_1')
         Width: =101
-        X: =883
-        Y: =279
+        X: =956
+        Y: =258
         ZIndex: =13
 
     Button3_10 As button:
@@ -197,25 +219,16 @@
         Fill: =RGBA(0, 0, 0, 0)
         Height: =152
         HoverFill: =RGBA(201, 197, 197, 0.3)
-        OnSelect: =Set(lists,'Restaurant Manager')
+        OnSelect: ='Restaurant Manager_1'
         RadiusBottomLeft: =20
         RadiusBottomRight: =20
         RadiusTopLeft: =20
         RadiusTopRight: =20
         Text: =""
         Width: =195
-        X: =836
-        Y: =177
+        X: =909
+        Y: =156
         ZIndex: =14
-
-    PieChart1_2 As pieChart:
-        Height: =339
-        ItemBorderColor: =RGBA(219, 219, 219, 1)
-        Items: =lists
-        Width: =496
-        X: =870
-        Y: =415
-        ZIndex: =17
 
     Label10_2 As label:
         FontWeight: =FontWeight.Semibold
@@ -254,4 +267,50 @@
         X: =1206
         Y: =88
         ZIndex: =21
+
+    Label39 As label:
+        BorderColor: =RGBA(237, 237, 237, 1)
+        BorderThickness: =1
+        Fill: =RGBA(204, 231, 246, 1)
+        Text: ="Emp id"
+        Width: =1136
+        X: =212
+        Y: =362
+        ZIndex: =22
+
+    Label40 As label:
+        Text: ="Name"
+        X: =299
+        Y: =362
+        ZIndex: =23
+
+    Label41 As label:
+        Text: ="MAIL "
+        X: =732
+        Y: =362
+        ZIndex: =24
+
+    Label41_1 As label:
+        Text: ="Gender"
+        X: =394
+        Y: =362
+        ZIndex: =25
+
+    Label41_2 As label:
+        Text: ="Type of Work"
+        X: =954
+        Y: =362
+        ZIndex: =26
+
+    Label41_3 As label:
+        Text: ="Contact num"
+        X: =544
+        Y: =362
+        ZIndex: =27
+
+    Label41_4 As label:
+        Text: ="Work Base"
+        X: =1113
+        Y: =362
+        ZIndex: =28
 
