--- a/EY/Src/admin Dashboard_2.fx.yaml
+++ b/EY/Src/admin Dashboard_2.fx.yaml
@@ -10,7 +10,7 @@
         BorderColor: =RGBA(255, 255, 255, 1)
         Fill: =RGBA(255, 255, 255, 1)
         Height: =152
-        OnSelect: =Set(lists,Branches)
+        OnSelect: =
         Width: =196
         X: =230
         Y: =161
@@ -40,18 +40,20 @@
 
     "Gallery1_3 As gallery.'BrowseLayout_Vertical_TwoTextOneImageVariant_ver5.0'":
         DelayItemLoading: =true
-        Height: =339
-        Items: =lists
+        Height: =364
+        Items: ='Restaurant Manager_1'
         Layout: =Layout.Vertical
         LoadingSpinner: =LoadingSpinner.Data
         OnSelect: =Navigate(adminDashboardList)
         TemplatePadding: =0
-        TemplateSize: =104
-        X: =230
-        Y: =429
+        TemplateSize: =64
+        Width: =1136
+        X: =212
+        Y: =404
         ZIndex: =5
 
         Title1_3 As label:
+            Align: =Align.Center
             FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
             Height: =41
             OnSelect: =Select(Parent)
@@ -59,29 +61,13 @@
             PaddingLeft: =0
             PaddingRight: =0
             PaddingTop: =0
-            Size: =20
+            Size: =15
             Text: =ThisItem.Title
             VerticalAlign: =VerticalAlign.Top
             Width: =99
-            X: =476
-            Y: =34
+            X: =4
+            Y: =8
             ZIndex: =2
-
-        Subtitle1_3 As label:
-            FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
-            Height: =55
-            OnSelect: =Select(Parent)
-            PaddingBottom: =0
-            PaddingLeft: =0
-            PaddingRight: =0
-            PaddingTop: =0
-            Size: =25
-            Text: =ThisItem.Branchname
-            VerticalAlign: =VerticalAlign.Top
-            Width: =345
-            X: =35
-            Y: =27
-            ZIndex: =3
 
         Separator1_3 As rectangle:
             Height: =8
@@ -96,6 +82,36 @@
             Visible: =If(ThisItem.IsSelected, true, false)
             Width: =4
             ZIndex: =6
+
+        Label21 As label:
+            OnSelect: =Select(Parent)
+            Text: =ThisItem.'Manager Name'
+            X: =192
+            Y: =8
+            ZIndex: =7
+
+        Label22 As label:
+            OnSelect: =Select(Parent)
+            Text: =ThisItem.Gender.Value
+            Width: =74
+            X: =507
+            Y: =8
+            ZIndex: =8
+
+        Label26 As label:
+            OnSelect: =Select(Parent)
+            Text: =ThisItem.'Branch '.Value
+            X: =949
+            Y: =8
+            ZIndex: =12
+
+        Label27 As label:
+            OnSelect: =Select(Parent)
+            Text: =ThisItem.'Restaurant Name'.Value
+            Width: =128
+            X: =709
+            Y: =8
+            ZIndex: =13
 
     Label7_10 As label:
         Align: =Align.Center
@@ -133,7 +149,7 @@
         Fill: =RGBA(0, 0, 0, 0)
         Height: =152
         HoverFill: =RGBA(202, 202, 202, 0.32)
-        OnSelect: =Set(lists,Employees)
+        OnSelect: =Navigate('admin Dashboard_1')
         RadiusBottomLeft: =20
         RadiusBottomRight: =20
         RadiusTopLeft: =20
@@ -150,7 +166,7 @@
         Fill: =RGBA(0, 0, 0, 0)
         Height: =152
         HoverFill: =RGBA(209, 205, 205, 0.27)
-        OnSelect: =Set(lists,Branches)
+        OnSelect: =Navigate('admin Dashboard')
         RadiusBottomLeft: =20
         RadiusBottomRight: =20
         RadiusTopLeft: =20
@@ -185,7 +201,7 @@
         Font: =Font.'Lato Black'
         Height: =50
         Size: =30
-        Text: =CountRows('Restaurant Manager')
+        Text: =CountRows('Restaurant Manager_1')
         Width: =101
         X: =883
         Y: =279
@@ -197,7 +213,6 @@
         Fill: =RGBA(0, 0, 0, 0)
         Height: =152
         HoverFill: =RGBA(201, 197, 197, 0.3)
-        OnSelect: =Set(lists,'Restaurant Manager')
         RadiusBottomLeft: =20
         RadiusBottomRight: =20
         RadiusTopLeft: =20
@@ -207,15 +222,6 @@
         X: =836
         Y: =177
         ZIndex: =14
-
-    PieChart1_3 As pieChart:
-        Height: =339
-        ItemBorderColor: =RGBA(219, 219, 219, 1)
-        Items: =lists
-        Width: =496
-        X: =870
-        Y: =415
-        ZIndex: =17
 
     Label10_3 As label:
         FontWeight: =FontWeight.Semibold
@@ -254,4 +260,41 @@
         X: =1206
         Y: =88
         ZIndex: =21
+
+    Label28 As label:
+        BorderColor: =RGBA(219, 219, 219, 1)
+        BorderThickness: =1
+        Fill: =RGBA(204, 231, 246, 1)
+        Text: ="Manager ID"
+        Width: =1136
+        X: =212
+        Y: =364
+        ZIndex: =22
+
+    Label29 As label:
+        Text: ="Name"
+        X: =426
+        Y: =364
+        ZIndex: =23
+
+    Label30 As label:
+        Text: ="Gender"
+        Width: =84
+        X: =687
+        Y: =364
+        ZIndex: =24
+
+    Label30_1 As label:
+        Text: ="Restaurant"
+        Width: =110
+        X: =906
+        Y: =364
+        ZIndex: =25
+
+    Label30_2 As label:
+        Text: ="Branch"
+        Width: =106
+        X: =1158
+        Y: =364
+        ZIndex: =26
 
