--- a/EY/CanvasManifest.json
+++ b/EY/CanvasManifest.json
@@ -104,9 +104,9 @@
     "DocumentAppType": "DesktopOrTablet",
     "DocumentLayoutHeight": 768,
     "DocumentLayoutLockOrientation": false,
-    "DocumentLayoutMaintainAspectRatio": true,
+    "DocumentLayoutMaintainAspectRatio": false,
     "DocumentLayoutOrientation": "landscape",
-    "DocumentLayoutScaleToFit": true,
+    "DocumentLayoutScaleToFit": false,
     "DocumentLayoutWidth": 1366,
     "DocumentType": "App",
     "EnableInstrumentation": false,
@@ -147,9 +147,9 @@
     "Emp Settings",
     "RM Dashboard",
     "Employee",
-    "Restaurants",
     "Geographies",
     "Settings",
-    "Onboarding Form"
+    "Onboarding Form",
+    "Restaurants"
   ]
 }
