--- a/An/Src/Components/admin.fx.yaml
+++ b/An/Src/Components/admin.fx.yaml
@@ -8,46 +8,30 @@ admin As CanvasComponent:
 
     "Gallery2 As gallery.'BrowseLayout_Vertical_TwoTextOneImageVariant_ver5.0'":
         DelayItemLoading: =true
-        Fill: =RGBA(102, 182, 227, 1)
-        Height: =640
-        Items: =["Dashboard","Managers","Branches","Employee","Settings","",""]
+        Fill: =RGBA(0, 94, 146, 1)
+        Height: =628
+        Items: =["Dashboard","Managers","Branches","Employee","Notifications"]
         Layout: =Layout.Vertical
         LoadingSpinner: =LoadingSpinner.Data
         OnSelect: =If(ThisItem.IsSelected,RGBA(153,207,236,1),RGBA(102,182,227,1))
         ShowScrollbar: =false
         TemplatePadding: =0
-        TemplateSize: =104
+        TemplateSize: =51
         Transition: =Transition.Push
         ZIndex: =5
 
-        Title2 As label:
-            Fill: =RGBA(102, 182, 227, 1)
-            Font: =Font.'Lato Black'
-            FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
-            OnSelect: =Select(Parent)
-            PaddingBottom: =0
-            PaddingLeft: =0
-            PaddingRight: =0
-            PaddingTop: =0
-            Size: =19
-            Text: =ThisItem.Value
-            VerticalAlign: =VerticalAlign.Top
-            Width: =192
-            X: =28
-            Y: =28
-            ZIndex: =2
-
-        Separator2 As rectangle:
-            Height: =8
-            OnSelect: =Select(Parent)
-            Width: =Parent.TemplateWidth
-            Y: =96
-            ZIndex: =5
-
         Rectangle5 As rectangle:
-            Height: =Parent.TemplateHeight - Separator2.Height
+            Height: =Parent.TemplateHeight
             OnSelect: =Select(Parent)
             Visible: =If(ThisItem.IsSelected, true, false)
             Width: =4
             ZIndex: =6
+
+        Button5 As button:
+            Fill: =RGBA(102, 182, 227, 1)
+            OnSelect: =Select(Parent)
+            Text: =ThisItem.Value
+            X: =4
+            Y: =11
+            ZIndex: =7
 
